[bluetooth] Introduce WriteWithoutResponse()

This change introduces WriteWithoutResponse() on
BluetoothRemoteGattCharacteristic. In contrast to the regular
WriteRemoteCharacteristic() this method does not wait for a response
from the operating system. For now it is only implemented on Mac, where
it can result in a speedup of 8x for sending data
(see https://crbug.com/808175#c9).

Bug: 808175, 831524
Change-Id: If2012ac8e19d17fe218e273d8d0e300a2b06a19a
Reviewed-on: https://chromium-review.googlesource.com/1000859
Commit-Queue: Jan Wilken Dörrie <jdoerrie@chromium.org>
Reviewed-by: Giovanni Ortuño Urquidi <ortuno@chromium.org>
Reviewed-by: Conley Owens <cco3@chromium.org>
Cr-Commit-Position: refs/heads/master@{#550157}
Former-commit-id: a7786fe58397c2087caee44e80e3ac36bbee49b4