device/bluetooth/bluetooth_remote_gatt_characteristic_mac.mm
@@ -213,6 +213,26 @@ void BluetoothRemoteGattCharacteristicMac::WriteRemoteCharacteristic(
   }
 }
 
+bool BluetoothRemoteGattCharacteristicMac::WriteWithoutResponse(
+    base::span<const uint8_t> value) {
+  if (!IsWritableWithoutResponse()) {
+    VLOG(1) << *this << ": Characteristic not writable without response.";
+    return false;
+  }
+  if (HasPendingRead() || HasPendingWrite()) {
+    VLOG(1) << *this << ": Characteristic write already in progress.";
+    return false;
+  }
+
+  VLOG(1) << *this << ": Write characteristic without response.";
+  base::scoped_nsobject<NSData> nsdata_value(
+      [[NSData alloc] initWithBytes:value.data() length:value.size()]);
+  [GetCBPeripheral() writeValue:nsdata_value
+              forCharacteristic:cb_characteristic_
+                           type:CBCharacteristicWriteWithoutResponse];
+  return true;
+}
+
 void BluetoothRemoteGattCharacteristicMac::SubscribeToNotifications(
     BluetoothRemoteGattDescriptor* ccc_descriptor,
     const base::Closure& callback,
@@ -411,6 +431,10 @@ bool BluetoothRemoteGattCharacteristicMac::IsWritable() const {
   BluetoothGattCharacteristic::Properties properties = GetProperties();
   return (properties & BluetoothGattCharacteristic::PROPERTY_WRITE) ||
          (properties & PROPERTY_WRITE_WITHOUT_RESPONSE);
+}
+
+bool BluetoothRemoteGattCharacteristicMac::IsWritableWithoutResponse() const {
+  return (GetProperties() & PROPERTY_WRITE_WITHOUT_RESPONSE);
 }
 
 bool BluetoothRemoteGattCharacteristicMac::SupportsNotificationsOrIndications()
