device/bluetooth/test/fake_remote_gatt_characteristic.h
@@ -92,6 +92,7 @@ class FakeRemoteGattCharacteristic
   void WriteRemoteCharacteristic(const std::vector<uint8_t>& value,
                                  const base::Closure& callback,
                                  const ErrorCallback& error_callback) override;
+  bool WriteWithoutResponse(base::span<const uint8_t> value) override;
 
  protected:
   // device::BluetoothRemoteGattCharacteristic overrides:
